force-app/main/default/objects/custom_create39__c/custom_create39__c.object-meta.xml
<CustomObject>
    <label>Custom created object39</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects39</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>