force-app/main/default/objects/custom_create39__c/fields/custom_create_39field522__c.field-meta.xml
<CustomField>
    <fullName>custom_create_39field522__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 39field522</label>
    <type>Checkbox</type>
</CustomField>